--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>TechHub | React Router</title>
 </head>
 
 <body class="bg-slate-200 dark:bg-slate-700 text-slate-700 dark:text-slate-200">
